Delete ProfileChooserView::CreateOtherProfilesView as it's not used now

This method is not used anywhere now, so should be deleted.

Bug: 756077
Change-Id: I7a136195858872615b31f5da7f5617ede9f8535d
Reviewed-on: https://chromium-review.googlesource.com/617520
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Xi Cheng <chengx@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494942}
Former-commit-id: c3c576ab9b5dd3670afb7948cdbe262187e1bfe4